- Support for bulk-selling items with the 'sell' command. Items
  are now put in a sell list instead of sold immediately.
  See the 'New commands' section.
- 'i desc' command now accepts item names.
- (partial) support for oRO commercial servers. Use serverType 6 for this.
- New Win32::GUI interface. Run 'openkore --interface=Win32' to enable.

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- storage [<eq|u|nu>]
  Only list equipments (eq), usable (u), or non usable (nu) items.
- whoami
  Displays your character and account ID.
- damage
  Displays the monsters and skills that damaged you.
- help [command]
  not new but updated and more useful
  you get now all options for a specific command
- guild break <guild name>
  Disband your guild.
- guild create <name>
  Create a guild.
- guild kick <list number> <reason>
  Kick a guild member out of the guild.
- storage desc <storage item #>
  Display storage item description.
- eq
  Lists what you are wearing in each equipment slot.
- take first
  Takes the first item on the ground.
- The sell commands have been changed. The new sell commands are:

  sell <inventory item #> [<amount>]
      Put inventory items in sell list.

  sell list
     Show items in the sell list.

  sell done
     Sell everything in the sell list.

  sell cancel
     Clear the sell list.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.
